--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "src/js/main.ts",
   "repository": "https://github.com/zanchi/nbody.git",
   "author": "Zanchi",
+  "scripts": {
+    "build": "webpack && http-server -p 3000 ./public"
+  },
   "dependencies": {
     "ts-loader": "^2.1.0",
     "typescript": "^2.3.3"
