--- a/package.json
+++ b/package.json
@@ -11,5 +11,12 @@
   "dependencies": {
     "ts-loader": "^2.1.0",
     "typescript": "^2.3.3"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.0.0",
+    "@types/mocha": "^2.2.41",
+    "chai": "^4.0.2",
+    "mocha": "^3.4.2",
+    "ts-node": "^3.0.6"
   }
 }
