--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "devDependencies": {
     "@types/chai": "^4.0.0",
     "@types/mocha": "^2.2.41",
+    "@types/node": "^8.0.3",
     "chai": "^4.0.2",
     "mocha": "^3.4.2",
-    "ts-node": "^3.0.6"
+    "ts-node": "^3.0.6",
+    "tsconfig-paths": "^2.2.0"
   }
 }
