--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "repository": "https://github.com/zanchi/nbody.git",
   "author": "Zanchi",
   "scripts": {
-    "build": "webpack && http-server -p 3000 ./public"
+    "build": "webpack && http-server -p 3000 ./public",
+    "perf": "node .\node_modules\ts-node/dist/bin.js -r tsconfig-paths/register ./test/perf.ts"
   },
   "dependencies": {
     "ts-loader": "^2.1.0",
