--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "ts-node": "^3.0.6",
     "tsconfig-paths": "^2.2.0",
     "tslint": "^5.9.1",
-    "tslint-config-airbnb": "^5.5.0",
-    "webpack-dev-server": "^2.9.2"
+    "tslint-config-airbnb": "^5.5.0"
   }
 }
